
	* Fixed naming of class.t3lib_db_preparedstatement.php in core_autoload.php

2010-08-19  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15421: [felogin] Possibility to show logout form direct after login
	* Fixed bug #15494: fatal error in phpunit BE module
	* Added feature #15425: [develop] debug all sql queries

2010-08-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Follow-up to #15457: Slightly modified API to be strict on param type guessing
	* Added feature #15457: Add support for prepared queries

2010-08-19  Francois Suter  <francois@typo3.org>

	* Fixed bug #15048: Workspaces: Autopublication task has too many rights
	* Fixed bug #15241: Recognize php-fpm sapi for path generation (thanks to Nikolas Hagelstein)

2010-08-16 Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15437: Refactor of recycler - fix of CheckboxSelectionModel

2010-08-15 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15437: Refactor of recycler
	* Fixed bug #15424: [web_info] allow more than 3 levels for pagetree overview and localization overview
	* Follow-up to #15423: Remove lowlevel page tree: added locallang labels again

2010-08-13 Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #13815: Added Testcase for numberFormat (Thanks to Sebastian Michaelsen)

2010-08-13  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15423: Remove lowlevel page tree (Thanks to Steffen Kamper)
	* Fixed bug #15450: [felogin] Spelling-error: "reseting" must be "resetting" (Thanks to Stefan Neufeind)

2010-08-13  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13662: rsaauth does not work with special characters (like ä ü ö § ) in password (Thanks to Steffen Ritter)

2010-08-12  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #15383: [Unit tests] Uncomment three tests which fail for php 5.3.0 on windows (Thanks to Steffen Kamper)

2010-08-12 Steffen Kamper  <steffen@typo3.org>
